2000-06-28  John Harper  <john@dcs.warwick.ac.uk>

	* play-sample.c, fonts.c: use sprintf if no snprintf

2000-06-25  John Harper  <john@dcs.warwick.ac.uk>

	* windows.c (Fwindow_icon_image): check that `w->wmhints != 0'

2000-06-24  John Harper  <john@dcs.warwick.ac.uk>

	* events.c (property_notify): when WM_HINTS changes, uncache
	icon, and refresh the frame

2000-06-23  John Harper  <john@dcs.warwick.ac.uk>

	* windows.c (add_window): if `initialising != 0', then set
	`placed' property of window before calling any hooks. This
	stops the window-history module rearranging windows..

	* frames.c (build_frame_part): value of `cursor' attribute will
	be called if it is functionp

	* frames.c (build_frame_part): don't need to check that values
	returned by call_protectedly are non-null

	* frames.c: new frame part attribute `scale-foreground'. When
	non-nil, the foreground image will be scaled to the size of the
	frame part
 	 * sawmill.h (struct frame_part): added `scale_foreground' flag

2000-06-22  John Harper  <john@dcs.warwick.ac.uk>

	* events.c (configure_request): when we know nonthing about the
	window, propagate the stacking-related fields of the event
	structure to the call to XConfigureWindow

2000-06-21  John Harper  <john@dcs.warwick.ac.uk>

	* fonts.c (generalize_xlfd): don't assume that snprintf (0, ..)
	returns the size of the string that would be formatted (breaks
	on Tru64). Patch from Aron Griffis <agriffis@bigfoot.com>

	* pixmap-cache.c (max_cached_pixels): reduced from 256K pixels
	to 64K pixels

2000-06-20  John Harper  <john@dcs.warwick.ac.uk>

	* events.c (configure_request): represent the full complexity
	of the stacking components of the request. The `stack' cell of
	the alist is (RELATION SIBLING), where RELATION is one of the
	symbols `above', `below', `top-if', `bottom-if', `opposite' and
	SIBLING is a window or `nil'

	[ patch from Brad Thompson <yak@mit.edu> ]

	* sawmill.h (Lisp_Window): added `icon_image' field. Null if