@@ -1,5 +1,7 @@
 2000-06-28  John Harper  <john@dcs.warwick.ac.uk>
 
+	* keys.c (default_mods): recapitalized the names
+
 	* play-sample.c, fonts.c: use sprintf if no snprintf
 
 2000-06-25  John Harper  <john@dcs.warwick.ac.uk>
